@@ -528,7 +528,7 @@ function real_space_move ($db, $destination)
         $energyscooped = 100;
     }
 
-    $free_power = NUM_ENERGY ($playerinfo['power']) - $playerinfo['ship_energy'];
+    $free_power = \bnt\CalcLevels::Energy ($playerinfo['power'], $level_factor) - $playerinfo['ship_energy'];
 
     // Amount of energy that can be stored is less than the amount scooped. Amount scooped is set to what can be stored.
     if ($free_power < $energyscooped)
