@@ -636,7 +636,7 @@ else
         $cargo_exchanged = $trade_ore + $trade_organics + $trade_goods;
 
         $free_holds = \bnt\CalcLevels::Holds ($playerinfo['hull'], $level_factor) - $playerinfo['ship_ore'] - $playerinfo['ship_organics'] - $playerinfo['ship_goods'] - $playerinfo['ship_colonists'];
-        $free_power = NUM_ENERGY($playerinfo['power']) - $playerinfo['ship_energy'];
+        $free_power = \bnt\CalcLevels::Energy ($playerinfo['power'], $level_factor) - $playerinfo['ship_energy'];
         $total_cost = $trade_ore * $ore_price + $trade_organics * $organics_price + $trade_goods * $goods_price + $trade_energy * $energy_price;
 
         // Debug info
