@@ -96,7 +96,7 @@ elseif (($destination < $sector_max && empty ($engage)) || ($destination < $sect
         $energyscooped = 100;
     }
 
-    $free_power = NUM_ENERGY ($playerinfo['power']) - $playerinfo['ship_energy'];
+    $free_power = \bnt\CalcLevels::Energy ($playerinfo['power'], $level_factor) - $playerinfo['ship_energy'];
     if ($free_power < $energyscooped)
     {
         $energyscooped = $free_power;
@@ -139,7 +139,7 @@ elseif ($destination < $sector_max && $engage > 0)
         $energyscooped = 100;
     }
 
-    $free_power = NUM_ENERGY ($playerinfo['power']) - $playerinfo['ship_energy'];
+    $free_power = \bnt\CalcLevels::Energy ($playerinfo['power'], $level_factor) - $playerinfo['ship_energy'];
     if ($free_power < $energyscooped)
     {
         $energyscooped = $free_power;
